--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
     "description": "SpamAssassin syntax highlight",
     "version": "0.0.1",
     "publisher": "mtorromeo",
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/mtorromeo/spamassassin-vscode.git"
+    },
     "engines": {
         "vscode": "^1.24.0"
     },
